[v4_2] Update 3rd party licnese issues
    Instead of duplicating more third-party licenses here in LICENSE
    file (there are many), just generically suggest to see the other files.

    Per the md5 copyright license agreement, add mention of
    required verbatim advertising statement in the release notes and
    readme.

    In the RELNOTES, I also mention ISC is open source software.

    In the README, I added a HISTORY section and placed that
    advertising statement there. If the HISTORY section is not wanted,
    then remove it and just mention the required verbatim advertising statement.
    By the way, some good history is in old READMEs and at
    http://hack.org/mc/texts/dhcp-freenix.txt
    (but I can't find the official hosted Lemon version of that paper).

    Remove the advertising clause from the historical BSD
    code copyrighted by The Regents of the University of California.

    For details see
    ftp://ftp.cs.berkeley.edu/pub/4bsd/README.Impt.License.Change

    (To summarize: in 1999, the University said that distributors
    are no longer required to acknowledge within advertising and the
    paragraph in the license may be deleted.)

--- a/README
+++ b/README
@@ -40,6 +40,7 @@ the ISC DHCP Distribution.
 	 5.10	 MacOS X
 	6	SUPPORT
 	 6.1	 HOW TO REPORT BUGS
+	7	HISTORY
 
 		      WHERE TO FIND DOCUMENTATION
 
@@ -692,3 +693,19 @@ bug reports are more likely to get handled more quickly overall.
 Please see https://www.isc.org/software/dhcp/ for details on how to subscribe
 to the ISC DHCP mailing lists.
 
+			       HISTORY
+
+ISC DHCP was originally written by Ted Lemon under a contract with
+Vixie Labs with the goal of being a complete reference implementation
+of the DHCP protocol.  Funding for this project was provided by
+Internet Systems Consortium. The first release of the ISC DHCP
+distribution in December 1997 included just the DHCP server.
+Release 2 in June 1999 added a DHCP client and a BOOTP/DHCP relay
+agent. DHCP 3 was released in October 2001 and included DHCP failover
+support, OMAPI, Dynamic DNS, conditional behaviour, client classing,
+and more. Version 3 of the DHCP server was funded by Nominum, Inc.
+The 4.0 release in December 2007 introduced DHCPv6 protocol support
+for the server and client.
+
+This product includes cryptographic software written
+by Eric Young (eay@cryptsoft.com).
