[v4_1_esv] Remove vix.com and nominum.com
    Remove old information from copyrights and
    man pages.

--- a/server/dhcpd.conf.5
+++ b/server/dhcpd.conf.5
@@ -2968,8 +2968,6 @@ manual page.
 dhcpd(8), dhcpd.leases(5), dhcp-options(5), dhcp-eval(5), RFC2132, RFC2131.
 .SH AUTHOR
 .B dhcpd.conf(5)
-was written by Ted Lemon
-under a contract with Vixie Labs.  Funding
-for this project was provided by Internet Systems Consortium.
+is maintained by ISC.
 Information about Internet Systems Consortium can be found at
 .B https://www.isc.org.
