[master] Typo in dhcpd.conf.5
Correct pool6 to pool.

--- a/server/dhcpd.conf.5
+++ b/server/dhcpd.conf.5
@@ -317,7 +317,7 @@ the deny list will be eligible.   If both permit and deny lists exist
 for a pool, then only clients that match the permit list and do not
 match the deny list will be allowed access.
 .PP
-The \fBpool6\fR declaration is similar to the \fBpool6\fR declaration.
+The \fBpool6\fR declaration is similar to the \fBpool\fR declaration.
 Currently it is only allowed within a \fBsubnet6\fR declaration, and
 may not be included directly in a shared network declaration.
 In addition to the \fBrange6\fR statement it allows the \fBprefix6\fR
