--- a/server/dhcpd.leases.5
+++ b/server/dhcpd.leases.5
@@ -142,12 +142,11 @@ manual page.
 .B DDNS Variables
 .PP
 .nf
-.B The \fIddns-text\fB and \fIddns-dhcid\fB variables
+.B The \fIddns-text\fB variable
 .PP
-These variables are used to record the value of the client's identification
+This variable is used to record the value of the client's identification
 record when the server has updated DNS for a particular lease.  The text
-record is used with the interim DDNS update style while the dhcid record
-is used for the standard DDNS update style.
+record is used with the interim DDNS update style.
 .PP
 .B The \fIddns-fwd-name\fB variable
 .PP
@@ -158,7 +157,7 @@ update the client's PTR record.
 .PP
 .B The \fIddns-client-fqdn\fB variable
 .PP
-If the server is configured both to use the interim or standard DDNS update
+If the server is configured both to use the interim DDNS update
 style, and to allow clients to update their own FQDNs, then if the
 client did in fact update its own FQDN, the
 \fIddns-client-fqdn\fR variable records the name that the client has
@@ -261,12 +260,6 @@ for allocation by the failover secondary.
 The \fBnext binding state\fR statement indicates what state the lease
 will move to when the current state expires.   The time when the
 current state expires is specified in the \fIends\fR statement.
-.PP
-.B rewind binding state \fIstate\fB;
-.PP
-This statement is part of an optimization for
-use with failover.  This helps a server rewind a lease to the state most
-recently transmitted to its peer.
 .PP
 .nf
 .B option agent.circuit-id \fIstring\fR;
