--- a/common/dhcp-options.5
+++ b/common/dhcp-options.5
@@ -1,6 +1,6 @@
 .\"	$Id: dhcp-options.5,v 1.43.8.4 2010/07/13 20:57:18 dhankins Exp $
 .\"
-.\" Copyright (c) 2012-2013 by Internet Systems Consortium, Inc. ("ISC")
+.\" Copyright (c) 2012-2014 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 2004-2010 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 1996-2003 by Internet Software Consortium
 .\"
@@ -168,6 +168,16 @@ some subnets of the directly connected network may have smaller MTUs.
 This option specifies the timeout in seconds for ARP cache entries.
 .RE
 .PP
+.B option \fBassociated-ip\fR \fIip-address\fR [\fB,\fR
+\fIip-address\fR... ]\fB;\fR
+.RS 0.25i
+.PP
+This option is part of lease query.  It is used to
+return all of the IP addresses associated with a given DHCP client.
+.PP
+This option is not user configurable.
+.RE
+.PP
 .B option \fBbcms-controller-address\fR \fIip-address\fR [\fB,\fR
 \fIip-address\fR... ]\fB;\fR
 .RS 0.25i
@@ -206,6 +216,17 @@ boot image for the client.
 This option specifies the broadcast address in use on the client's
 subnet.  Legal values for broadcast addresses are specified in
 section 3.2.1.3 of STD 3 (RFC1122).
+.RE
+.PP
+.B option \fBclient-last-transaction-time\fR \fIuint32\fR\fB;\fR
+.RS 0.25i
+.PP
+This option is part of lease query.  It allows the
+receiver to determine the time of the most recent access by the
+client.  The value is a duration in seconds from when the client
+last communicated with the DHCP server.
+.PP
+This option is not user configurable.
 .RE
 .PP
 .B option \fBcookie-servers\fR \fIip-address\fR [\fB,\fR \fIip-address\fR...
@@ -339,8 +360,8 @@ This option is not user configurable.
 .PP
 .RE
 .PP
-.B option \fBdhcp-parameter-request-list\fR \fIuint16\fR [\fB,\fR
-\fIuint16\fR... ]\fB;\fR
+.B option \fBdhcp-parameter-request-list\fR \fIuint8\fR [\fB,\fR
+\fIuint8\fR... ]\fB;\fR
 .RS 0.25i
 .PP
 This option, when sent by the client, specifies which options the
@@ -937,7 +958,7 @@ assigned will override the subnet mask specified in the subnet
 declaration.
 .RE
 .PP
-.B option \fBsubnet-selection\fR \fIstring\fR\fB;\fR
+.B option \fBsubnet-selection\fR \fIip-address\fR\fB;\fR
 .RS 0.25i
 .PP
 Sent by the client if an address is required in a subnet other than the one
@@ -1651,7 +1672,7 @@ have some vendor-specific structure (similar to VSIO), but we have chosen
 to treat this option as an opaque field.
 .RE
 .PP
-.B option \fBdhcp6.subscriber-id\fR\fB;\fR
+.B option \fBdhcp6.subscriber-id\fR \fIstring\fR\fB;\fR
 .RS 0.25i
 .PP
 The \fBsubscriber-id\fR option is an opaque field provided by the relay agent,
