[master] Updates for 4.3.1 final

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 	      Internet Systems Consortium DHCP Distribution
-			      Version 4.3.1rc1
-			       1 August 2014
+			      Version 4.3.1
+			      11 August 2014
 
 			      README FILE
 
@@ -141,12 +141,12 @@ information.   On Digital Unix, type ``man pfilt''.
 To build the DHCP Distribution, unpack the compressed tar file using
 the tar utility and the gzip command - type something like:
 
-	gunzip dhcp-4.3.1rc1.tar.gz
-	tar xvf dhcp-4.3.1rc1.tar
+	gunzip dhcp-4.3.1.tar.gz
+	tar xvf dhcp-4.3.1.tar
 
 			    CONFIGURING IT
 
-Now, cd to the dhcp-4.3.1rc1 subdirectory that you've just created and
+Now, cd to the dhcp-4.3.1 subdirectory that you've just created and
 configure the source tree by typing:
 
 	./configure
