--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 	      Internet Systems Consortium DHCP Distribution
-			      Version 4.3.2rc2
-			      26 February 2015
+			      Version 4.3.2
+			      05 March 2015
 
 			      README FILE
 
@@ -141,12 +141,12 @@ information.   On Digital Unix, type ``man pfilt''.
 To build the DHCP Distribution, unpack the compressed tar file using
 the tar utility and the gzip command - type something like:
 
-	gunzip dhcp-4.3.2rc2.tar.gz
-	tar xvf dhcp-4.3.2rc2.tar
+	gunzip dhcp-4.3.2.tar.gz
+	tar xvf dhcp-4.3.2.tar
 
 			    CONFIGURING IT
 
-Now, cd to the dhcp-4.3.2rc2 subdirectory that you've just created and
+Now, cd to the dhcp-4.3.2 subdirectory that you've just created and
 configure the source tree by typing:
 
 	./configure
